add class for threading